# CTU

./: README.md
1.semester/PRP (Procedural programming in C)/hw02/: main.c
1.semester/PRP (Procedural programming in C)/hw03/: main.c
1.semester/PRP (Procedural programming in C)/hw04/: generate_solutions_bonus.sh  main.c
1.semester/PRP (Procedural programming in C)/hw06/: main.c
1.semester/PRP (Procedural programming in C)/hw07/: grep.c
1.semester/PRP (Procedural programming in C)/hw08/: main.c
1.semester/PRP (Procedural programming in C)/hw10/dijkstra/: readme.txt
1.semester/PRP(Procedural programming in C)/hw01/: main.c
1.semester/PRP(Procedural programming in C)/hw04/: Makefile  generate_solutions.sh
1.semester/PRP(Procedural programming in C)/hw05/: main.c
1.semester/PRP(Procedural programming in C)/hw08/: Makefile  queue.c  queue.h
1.semester/PRP(Procedural programming in C)/hw09/: graph.c  graph.h  main.c
1.semester/RPH (Problem solving and games in Python)/Reversi/: player.py  reversi_creator.py  reversi_io.py  test_on_datasets.py
1.semester/RPH (Problem solving and games in Python)/Reversi/dataset/: game1_state00.txt  game1_state01.txt  game1_state02.txt  game1_state03.txt  game1_state04.txt  game1_state05.txt  game1_state06.txt  game1_state07.txt  game1_state08.txt  game1_state09.txt  game1_state10.txt  game1_state11.txt  game1_state12.txt  (+165 more)
1.semester/RPH (Problem solving and games in Python)/Spam filter/: confmat.py  corpus.py  filter.py  quality.py  trainingcorpus.py  utils.py
1.semester/RPH (Problem solving and games in Python)/hw01/: vectors.py  vectrostest.py
2.semester/APO (Computers Architecture)/arkanoid/: Makefile  README.MD  arkanoid.c  font_rom8x16.c  font_types.h  objects.c  objects.h  used_fonts.c  utils.c  utils.h
2.semester/PJV (Programming in Java)/Chess/: README.md  pom.xml
2.semester/PSIA (Computer Networks)/homeworks/: hw01_reciever.py  hw01_sender.py  hw02_reciever.py  hw02_sender.py  hw03_reciever.py  hw03_sender.py
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw01/: CMakeLists.txt  Makefile  ThreadPool.h  main.cpp
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw02/: CMakeLists.txt  Makefile  SumsOfVectors.cpp  SumsOfVectors.h  main.cpp
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw02/_dataGenerator/: DataGenerator.cpp  DataGenerator.h
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw02/_executor/: Executor.cpp  Executor.h
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw02/_outputGenerator/: TextTable.h
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw03/: CMakeLists.txt  Makefile  bst_tree.cpp  bst_tree.h  main.cpp  tests.h
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw04/: CMakeLists.txt  Makefile  main.cpp  params.h  query.h
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw04/_generator/: generator.cpp
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw05/: CMakeLists.txt  Makefile  main.cpp  sort.cpp  sort.h
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw05/_generator/: generator.h
4.semester/PDV (Parallel and Distributed Computing)/homeworks/hw05/_tests/: test.h
4.semester/PDV (Parallel and Distributed Computing)/homeworks/sem1/sem_01/: CMakeLists.txt  main.cpp  state.h
4.semester/PDV (Parallel and Distributed Computing)/homeworks/sem1/sem_01/algorithms/: bfs.cpp  bfs.h  iddfs.cpp  iddfs.h
4.semester/PDV (Parallel and Distributed Computing)/homeworks/sem1/sem_01/domains/: hanoi.h  maze.h  sat.h  slidingPuzzle.h
4.semester/TS1 (Software Testing)/semestral/: GiftCertificate.xlsx
4.semester/TS1/semestral/: ProductReturns.xlsx  README.md
5.semester/EAR/semestral-project/: README.md  pom.xml
(+688 files in other folders)
